
package weizhu.login;

option java_package = "com.weizhu.officialAccounts.proto";
option java_outer_classname = "LoginProtos";

message User {
  required string  user_name     = 1;
  required string  password      = 2;
}


message LoginRequest {
  required string  user_name     = 1;
  required string  password      = 2;
}

message LoginResponse {
  enum Result {
    SUCC                               = 0;
    FAIL_PERMISSION_DENIED             = 1; //无此操作权限    
    FAIL_USER_NOT_EXIST                = 2; //用户不存在
    FAIL_PASSWORD_IS_WRONG             = 3; //密码错误
    
    FAIL_UNKNOWN             = 99;
  }
  
  optional Result result    = 1 [default = FAIL_UNKNOWN]; // 返回结果
  optional string fail_text = 2; // 错误文本
}
